--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -238,7 +238,7 @@
 
 
 <h1 id="_1">前言</h1>
-<p>JavaScript 是一种高级编程语言，最初是为了在 Web 页面中添加交互式效果而创建的。它是一种脚本语言，可以在 Web 浏览器中运行，也可以在服务器端运行。JavaScript 是一种解释性语言，不需要编译器来编译代码。它是一种面向对象的语言，支持面向对象编程的所有特性。JavaScript 还是一种动态语言，可以在运行时修改变量和函数。JavaScript 具有轻量级、易学易用、跨平台、与 HTML 和 CSS 集成、丰富的库和框架、强大的功能等优点，但也存在安全性问题、浏览器兼容性问题和性能问题等缺点。</p>
+<p>JavaScript 是一种高级解释型编程语言，它基于原型和头等函数，支持多种编程范式，包括面向对象、指令式、函数式编程。它提供了许多操作文本、数组、日期和正则表达式等数据类型方法。虽然 JavaScript 不支持 I/O 操作，例如网络、存储和图形等，但它可以通过宿主环境来提供这些支持。ECMA 通过 ECMAScript 实现了该语言的标准化。目前，JavaScript 被全世界上大多数网站所使用，并得到了主流浏览器的支持。尽管 JavaScript 和 Java 在名称和语法上很相似，但这两种编程语言在设计上有很大的不同。JavaScript 的语言设计主要受到了 Self 和 Scheme 的影响，在语法结构上与 C 语言非常类似。</p>
 
 
 
